# play-lmp

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  run_policy.ipynb  train.py
conf/: config.yaml
play_lmp/: encoders.py  play_lmp.py  policies.py  preprocessing.py
src/play_lmp/: __init__.py  _nn.py  _play_lmp.py  _training.py  play_lmp.py  policies.py
